syntax = "proto3";
package authsdk;

option go_package = "../protoc";

message UserResult {
    bool Success = 1;
    User user = 2;
}

message AuthData {
    string token = 1;
}

message User {
    string UserID = 1;
    string UserName = 2;
    string AuthType = 3;
    string Email = 5;
    int64 CreatedAt = 6;
}

message CreateData {
    string SDKKEY = 1;
    string UserName = 2;
    string Password = 3;
}

message CreateResponse {
    bool success = 1;
    string userid = 2;
}

message GetUserAllRequest {
    string SDKKEY = 1;
    string UserID = 2;
}

message GetUserAllResponse {
    bool success = 1;
    UserAllData user = 2;
}

message UserAllData {
    string UserID = 1;
    string UserName = 2;
    string AuthType = 3;
    string Email = 5;
    int64 CreatedAt = 6;
    string Password = 7;
    bool isHashed = 8;   
}

service AuthService {
    rpc Auth(AuthData) returns (UserResult) {}
    rpc Create(CreateData) returns (CreateResponse) {}
    rpc GetUserAll(GetUserAllRequest) returns (GetUserAllResponse) {}
}
